--- a/bonus.html
+++ b/bonus.html
@@ -10,6 +10,14 @@
     <h2> Favarite Movie - Raja Rani </h2>
     <p> Raja rani is a decent romantic drama. 
     It reiterates that ‘there is love after love failure’ and importantly ‘there is life after love failure’. Arya has done a good job in this movie. Jai is good as naive and innocent call centre executive Surya. </p>
+	
+	
+	<h2>  National Museum </h2>
+    <p> Salar Jung Museum takes you on a nostalgic tour of the past, with its collection of royal trappings such as <b>**sculpture**, **paintings** **textiles**, **manuscripts**, **ceramics**, **carpets**, **clocks**, **furniture**</b> etc all from various parts of the world. ***</p>
+      <hr>
+    <h3> Closest Airport to the Museum </h3>
+      <h4> Hyderabad Airport </h4>
+		  
       <a href="https://github.com/44-563-Web-Apps-F22/44563-webapps-assignment-3-tejapathuri/blob/main/aboutme.html"> Link to AboutMe Page </a>
   </body>
   </html>
