--- a/bonus.html
+++ b/bonus.html
@@ -15,9 +15,20 @@
 	<h2>  National Museum </h2>
     <p> Salar Jung Museum takes you on a nostalgic tour of the past, with its collection of royal trappings such as <b>**sculpture**, **paintings** **textiles**, **manuscripts**, **ceramics**, **carpets**, **clocks**, **furniture**</b> etc all from various parts of the world. ***</p>
       <hr>
-    <h3> Closest Airport to the Museum </h3>
-      <h4> Hyderabad Airport </h4>
+    <h3> Closest Airport to the Museum:  Hyderabad (RGIA) </h3>
+      <h4> There are 5 ways to get from Delhi Airport to National Museum </h4>
+
+      <ol>
+          <li> Bus </li>
+          <li> Taxi </li> 
+          <li> Car</li>
+		  <li> Subway</li>
+		  <li> Towncar</li>
 		  
+		</ol>
+	  <h4>There is no direct connection from Salar Jung Museum to Hyderabad Airport (RGIA). However, you can take the walk to Mahatma Gandhi Bus Station, take the subway to Lakdi-ka-pul, take the walk to AC Guards, then take the bus to Rajiv Gandhi International Airport. Alternatively, you can take the taxi to Hyderabad Airport (RGIA). </h4>
+	  
+	  
       <a href="https://github.com/44-563-Web-Apps-F22/44563-webapps-assignment-3-tejapathuri/blob/main/aboutme.html"> Link to AboutMe Page </a>
   </body>
   </html>
