--- a/bonus.html
+++ b/bonus.html
@@ -28,7 +28,15 @@
 		</ol>
 	  <h4>There is no direct connection from Salar Jung Museum to Hyderabad Airport (RGIA). However, you can take the walk to Mahatma Gandhi Bus Station, take the subway to Lakdi-ka-pul, take the walk to AC Guards, then take the bus to Rajiv Gandhi International Airport. Alternatively, you can take the taxi to Hyderabad Airport (RGIA). </h4>
 	  
-	  
-      <a href="https://github.com/44-563-Web-Apps-F22/44563-webapps-assignment-3-tejapathuri/blob/main/aboutme.html"> Link to AboutMe Page </a>
+	  <h4> Other locations around the Museum </h4>
+          <ul>
+          <li> Chilkur Balaji Temple </li>
+          <li> Ramoji Film City </li>
+          <li> Golconda Fort </li>
+          <li> Chowmahalla Palace</li>
+          <li> Taj Falaknuma Palace </li>
+          <li> Birla Mandir </li>
+          </ul>
+      <a href="https://github.com/44-563-Web-Apps-F22/44563-webapps-assignment-3-likhithalavu/blob/main/aboutme.html"> Link to AboutMe Page </a>
   </body>
   </html>
