--- a/bonus.html
+++ b/bonus.html
@@ -2,11 +2,11 @@
  <html>
   <a href="https://github.com/44-563-Web-Apps-F22/44563-webapps-assignment-3-likhithalavu/blob/main/bonus.html"> Bonus </a>
  <head>
-    <title> My First HTML Webpage </title>
+    <title> My First page </title>
   </head>
   <body>
-    <h1>Likhitha chowdary Lavu</h1>
-	<p>i came from india to study masters in northwest missouri state university in applied computer science and iam very much intersted to know more about web application</p>
+    <h2>Likhitha Chowdary Lavu</h2>
+	<p>I came from india to study masters in northwest missouri state university in applied computer science and iam very much intersted to know more about web application</p>
     <h2> Favarite Movie - Raja Rani </h2>
     <p> Raja rani is a decent romantic drama. 
     It reiterates that ‘there is love after love failure’ and importantly ‘there is life after love failure’. Arya has done a good job in this movie. Jai is good as naive and innocent call centre executive Surya. </p>
@@ -26,8 +26,8 @@
 		  <li> Towncar</li>
 		  
 		</ol>
-	  <h4>There is no direct connection from Salar Jung Museum to Hyderabad Airport (RGIA). However, you can take the walk to Mahatma Gandhi Bus Station, take the subway to Lakdi-ka-pul, take the walk to AC Guards, then take the bus to Rajiv Gandhi International Airport. Alternatively, you can take the taxi to Hyderabad Airport (RGIA). </h4>
-	  
+	  <p>There is no direct connection from Salar Jung Museum to Hyderabad Airport (RGIA). However, you can take the walk to Mahatma Gandhi Bus Station, take the subway to Lakdi-ka-pul, take the walk to AC Guards, then take the bus to Rajiv Gandhi International Airport. Alternatively, you can take the taxi to Hyderabad Airport (RGIA). </p>
+	  <hr>
 	  <h4> Other locations around the Museum </h4>
           <ul>
           <li> Chilkur Balaji Temple </li>
