--- a/bonus.html
+++ b/bonus.html
@@ -1,42 +1,21 @@
 <!DOCTYPE html>
- <html>
-  <a href="https://github.com/44-563-Web-Apps-F22/44563-webapps-assignment-3-likhithalavu/blob/main/bonus.html"> Bonus </a>
- <head>
-    <title> My First page </title>
-  </head>
-  <body>
-    <h2>Likhitha Chowdary Lavu</h2>
-	<p>I came from india to study masters in northwest missouri state university in applied computer science and iam very much intersted to know more about web application</p>
-    <h2> Favarite Movie - Raja Rani </h2>
-    <p> Raja rani is a decent romantic drama. 
-    It reiterates that ‘there is love after love failure’ and importantly ‘there is life after love failure’. Arya has done a good job in this movie. Jai is good as naive and innocent call centre executive Surya. </p>
-	
-	
-	<h2>  National Museum </h2>
-    <p> Salar Jung Museum takes you on a nostalgic tour of the past, with its collection of royal trappings such as <b>**sculpture**, **paintings** **textiles**, **manuscripts**, **ceramics**, **carpets**, **clocks**, **furniture**</b> etc all from various parts of the world. ***</p>
-      <hr>
-    <h3> Closest Airport to the Museum:  Hyderabad (RGIA) </h3>
-      <h4> There are 5 ways to get from Delhi Airport to National Museum </h4>
+<html >
+<head>
+    <title>Bonus</title>
+</head>
+<body>
+    <h1>Lockport Liger</h1>
+    <p>The history of lion-tiger hybrids dates to at least the early 19th century in Lockport</p>
+   
+   <ol>
+    <li>The liger has a faint tiger-like striped pattern upon a lionesque tawny background</li>
+    <li>The liger is often believed to be the largest known cat in the world</li>
+    <li>Ligers are about the same size as the prehistoric Smilodon populator and American lion.</li>
+	<li>Ligers typically have a life expectancy of between 13 and 18 years</li>
+    </ol>
+    <img src="liger.jpg" alt="Liger" width="1023" height="682">
 
-      <ol>
-          <li> Bus </li>
-          <li> Taxi </li> 
-          <li> Car</li>
-		  <li> Subway</li>
-		  <li> Towncar</li>
-		  
-		</ol>
-	  <p>There is no direct connection from Salar Jung Museum to Hyderabad Airport (RGIA). However, you can take the walk to Mahatma Gandhi Bus Station, take the subway to Lakdi-ka-pul, take the walk to AC Guards, then take the bus to Rajiv Gandhi International Airport. Alternatively, you can take the taxi to Hyderabad Airport (RGIA). </p>
-	  <hr>
-	  <h4> Other locations around the Museum </h4>
-          <ul>
-          <li> Chilkur Balaji Temple </li>
-          <li> Ramoji Film City </li>
-          <li> Golconda Fort </li>
-          <li> Chowmahalla Palace</li>
-          <li> Taj Falaknuma Palace </li>
-          <li> Birla Mandir </li>
-          </ul>
-      <a href="https://github.com/44-563-Web-Apps-F22/44563-webapps-assignment-3-likhithalavu/blob/main/aboutme.html"> Link to AboutMe Page </a>
-  </body>
-  </html>
+    <br>
+    <a href="index.html">Index</a>
+</body>
+</html>
