--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	
 	
 	<h2>  National Museum </h2>
-    <p> Salar Jung Museum takes you on a nostalgic tour of the past, with its collection of royal trappings such as <b>**sculpture**, **paintings** **textiles**, **manuscripts**, **ceramics**, **carpets**, **clocks**, **furniture**</b> etc all from various parts of the world. ***</p>
+    <p> Salar Jung Museum takes you on a nostalgic tour of the past, with its collection of royal trappings such as <b>sculpture, paintings, textiles, manuscripts, ceramics, carpets, clocks, furniture</b> etc all from various parts of the world.</p>
       <hr>
     <h3> Closest Airport to the Museum:  Hyderabad (RGIA) </h3>
       <h4> There are 5 ways to get from Delhi Airport to National Museum </h4>
