--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
  <html>
-  <a href="https://github.com/44-563-Web-Apps-F22/44563-webapps-assignment-3-likhithalavu/blob/main/bonus.html"> Bonus </a>
+  <a href="bonus.html"> Bonus </a>
  <head>
     <title> My First page </title>
   </head>
@@ -37,6 +37,6 @@
           <li> Taj Falaknuma Palace </li>
           <li> Birla Mandir </li>
           </ul>
-      <a href="https://github.com/44-563-Web-Apps-F22/44563-webapps-assignment-3-likhithalavu/blob/main/aboutme.html"> Link to AboutMe Page </a>
+      <a href="index.html"> Link to AboutMe Page </a>
   </body>
   </html>
