--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
           <li> Taj Falaknuma Palace </li>
           <li> Birla Mandir </li>
           </ul>
-      <a href="index.html"> Link to AboutMe Page </a>
+      <a href="aboutme.html"> AboutMe Page </a>
   </body>
   </html>
