--- a/aboutme.html
+++ b/aboutme.html
@@ -3,6 +3,13 @@
     <head>
         <title>About me</title>
       </head>
+	  <style>
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+  text-align: center; 
+}
+</style>
     <body>
 <h1> Likhitha Chowdary Lavu </h1>
 <p>I came from india to study masters in northwest missouri state university in applied computer science and iam very much intersted to know more about web application </p>
@@ -11,10 +18,43 @@
 
 <img src="Raja Rani.jpg" alt="Raja Rani Movie Poster">
 <hr>
-<a href="index.html"> Index Page </a>
-<hr>
 
+<h3> Cities Recommended </h3>
+
+<table style="width:100%">
+    <tr>
+      <th>City</th>
+      <th>Locations</th>
+      <th>Time to spend visiting</th>
+    </tr>
+    <tr>
+        <td>Guntur</td>
+        <td>Gandhi Park</td>
+        <td>1 day</td>
+      </tr>
+      <tr>
+        <td>Goa</td>
+        <td>Palolem Beach</td>
+        <td>5 hours</td>
+      </tr>
+      <tr>
+        <td>Vijayawada</td>
+        <td>Kanaka Durga Temple</td>
+        <td>3 hours</td>
+      </tr>
+      <tr>
+        <td>Banglore</td>
+        <td>Wonderla</td>
+        <td>12 hours</td>
+      </tr>
+</table>
+
+<hr>
 <h4>Code Display </h4>
 <pre>mixin for offset positioning </pre>
-<blockquote link="https://stackoverflow.com/questions/49107123/sass-offset-position-mixin-troubles" />
+<blockquote link="https://stackoverflow.com/questions/49107123/sass-offset-position-mixin-troubles" >
+</blockquote>
+<hr>
+
+<a href="index.html"> Index Page </a>
 </body>
